--- a/notebooks/load_and_clean_old.ipynb
+++ b/notebooks/load_and_clean_old.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -216,10 +216,10 @@
     "#The rest of the columns that contain null values are String attributes and replacing the NaN values with \"Unknown\"\n",
     "#we can do and take note of it so that we know about it when exploring the data.  But, it makes sense to keep\n",
     "#these rows as we do not want to miss any information that these rows may contain.\n",
-    "crime_data_cleaned.Location.fillna(\"UNKNOWN\", inplace= True)\n",
-    "crime_data_cleaned.InsideOutside.fillna(\"UNKNOWN\", inplace= True)\n",
-    "crime_data_cleaned.Neighborhood.fillna(\"UNKNOWN\", inplace= True)\n",
-    "crime_data_cleaned.Premise.fillna(\"UNKNOWN\", inplace= True)\n",
+    "crime_data_cleaned.Location.fillna(\"Unknown\", inplace= True)\n",
+    "crime_data_cleaned.InsideOutside.fillna(\"Unknown\", inplace= True)\n",
+    "crime_data_cleaned.Neighborhood.fillna(\"Unknown\", inplace= True)\n",
+    "crime_data_cleaned.Premise.fillna(\"Unknown\", inplace= True)\n",
     "\n",
     "#We notice also that some values in the InsideOutside column are inconsistent - some labeled inside have values of\n",
     "#just \"I\" and others have \"Inside\" normoalize these to be \"I\", \"O\", or the \"Unknown\"\n",
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
