--- a/notebooks/ml-analysis.ipynb
+++ b/notebooks/ml-analysis.ipynb
@@ -27768,6 +27768,11 @@
    "source": [
     "#now lets try KNN\n",
     "#Create KNN Classifier\n",
+    "\n",
+    "#########################\n",
+    "# KNN takes forever to run - there are too many columns/dimensions for it to be fast\n",
+    "# For this reason I decided to not use it and left it out of the technical report.\n",
+    "\n",
     "knn = KNeighborsClassifier(n_neighbors=5)\n",
     "\n",
     "#drop the columns that are not predictors\n",
@@ -27783,26 +27788,16 @@
     "\n",
     "print(\"Accuracy:\",metrics.accuracy_score(y_test, y_pred))\n",
     "\n",
-    "#########################\n",
-    "# KNN takes forever to run - there are too many columns/dimensions for it to be fast\n",
-    "\n",
     "#can test again with cross-validation here:\n",
-    "#depth = []\n",
-    "#for i in range(3,11,2):\n",
-    "#    knn = KNeighborsClassifier(n_neighbors=i)\n",
+    "depth = []\n",
+    "for i in range(3,11,2):\n",
+    "    knn = KNeighborsClassifier(n_neighbors=i)\n",
     "    # Perform 10-fold cross validation \n",
-    "#    scores = cross_val_score(estimator=knn, X=X, y=y, cv=10, n_jobs=4)\n",
-    "#    depth.append((i,scores.mean()))\n",
-    "#for elements in depth:\n",
-    "#    print(\"Depth: \" + str(elements[0]) + \" with accuracy of: \" + str(elements[1]))\n"
+    "    scores = cross_val_score(estimator=knn, X=X, y=y, cv=10, n_jobs=4)\n",
+    "    depth.append((i,scores.mean()))\n",
+    "for elements in depth:\n",
+    "    print(\"Depth: \" + str(elements[0]) + \" with accuracy of: \" + str(elements[1]))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
